# inventory_management_api

./: alembic.ini  data.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06a3b5a78377_initial_tables.py
inventory_management/: main.py
inventory_management/api/v1/products/: router.py
inventory_management/db/: __init__.py  database.py
inventory_management/models/: __init__.py  category.py  product.py  provider.py  stock_movements.py
inventory_management/repository/products/: crud.py
inventory_management/schemas/: category.py  product.py  provider.py  stock_movement.py
inventory_management/scripts/: load_data.py
